Bug 501310 - Part of the canvas becomes transparent when using the crop-tool, I have to hide then show the layer to make the bug disappear. It's systematically everytime.
Summary: Part of the canvas becomes transparent when using the crop-tool, I have to hi...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.2.9
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-10 18:05 UTC by jonaheuschen
Modified: 2026-04-03 14:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
error reproduced on screencap (1.89 MB, video/mp4)
2025-03-10 18:13 UTC, jonaheuschen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jonaheuschen 2025-03-10 18:05:57 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Part of the canvas becomes transparent when using the crop-tool, I have to hide then show the layer to make the bug disapear. It's systematically everytime.

STEPS TO REPRODUCE
1. use crop tool, part of canvas becomes transparent, the part of canvas affected is consistent if we drag the canvas around the screen with pan tool.
2. hide layer, then show layer fixes issue
3. that bug may have variations.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 jonaheuschen 2025-03-10 18:13:26 UTC
Created attachment 179270 [details]
error reproduced on screencap
Comment 2 jonaheuschen 2025-03-10 18:14:23 UTC
Mac Mini M4 16GB. MacOS 15.3.1 (24D70)
Comment 3 vanyossi 2025-03-10 19:25:05 UTC
Texture buffer on macOs has been a pain to try and fix it, and afair the performance with it turned off should be roughly similar, specially on M series chips. I suggest you turn it off

Go to preferences -> Display, and turn off "Use texture Buffer"
Comment 4 jonaheuschen 2025-03-11 17:55:00 UTC
(In reply to vanyossi from comment #3)
> Texture buffer on macOs has been a pain to try and fix it, and afair the
> performance with it turned off should be roughly similar, specially on M
> series chips. I suggest you turn it off
> 
> Go to preferences -> Display, and turn off "Use texture Buffer"

Hello, Thank you. I think it worked.
Comment 5 Dmitry Kazakov 2026-04-03 14:31:29 UTC
Git commit 98a0d6ef2145e155e775e987a7898294176be58c by Dmitry Kazakov.
Committed on 03/04/2026 at 14:31.
Pushed by dkazakov into branch 'master'.

Fix artifacts appearing on the canvas when cropping the image

The image resize signal should be syncronous to make sure
there is no race condition for the data fetching from the image.

M  +2    -1    libs/image/kis_image_signal_router.cpp

https://invent.kde.org/graphics/krita/-/commit/98a0d6ef2145e155e775e987a7898294176be58c
Comment 6 Dmitry Kazakov 2026-04-03 14:32:03 UTC
Git commit 07f42fe4c9f0452c0d4cd62ea0169bac20a6f514 by Dmitry Kazakov.
Committed on 03/04/2026 at 14:31.
Pushed by dkazakov into branch 'krita/6.0'.

Fix artifacts appearing on the canvas when cropping the image

The image resize signal should be syncronous to make sure
there is no race condition for the data fetching from the image.

M  +2    -1    libs/image/kis_image_signal_router.cpp

https://invent.kde.org/graphics/krita/-/commit/07f42fe4c9f0452c0d4cd62ea0169bac20a6f514