Fix artifacts appearing on the canvas when cropping the image

The image resize signal should be syncronous to make sure
there is no race condition for the data fetching from the image.

BUG:501310